# esp32-nfc-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml
components/config/include/: config.h
components/network/: CMakeLists.txt
components/network/include/: captive_dns.h  http_server.h  wifi_ap.h  ws_progress.h
components/network/src/: api_dumps.c  api_keys.c  api_nfc.c  api_ota.c  captive_dns.c  http_server.c  wifi_ap.c  ws_progress.c
components/nfc/: CMakeLists.txt
components/nfc/include/: default_keys.h  mifare_classic.h  ndef.h  nfc_cancel.h  ntag.h  pn532.h
components/nfc/src/: mifare_classic.c  ndef.c  nfc_cancel.c  ntag.c  pn532.c
components/storage/: CMakeLists.txt
components/storage/include/: dump_store.h  hex_util.h  keys_store.h
components/storage/src/: dump_store.c  keys_store.c
components/web_ui/: CMakeLists.txt
components/web_ui/assets/: app.js  index.html  style.css
main/: CMakeLists.txt  Kconfig.projbuild  config.h  idf_component.yml  main.c
main/html/: app.js  index.html  style.css
main/net/: api_dumps.c  api_keys.c  api_nfc.c  api_ota.c  captive_dns.c  http_server.c  http_server.h  wifi_ap.c  ws_progress.c  ws_progress.h
main/nfc/: default_keys.c  default_keys.h  mifare_classic.c  mifare_classic.h  ndef.c  ndef.h  nfc_cancel.c  nfc_cancel.h  nfc_lock.c  nfc_lock.h  nfc_monitor.c  nfc_monitor.h  ntag.c  ntag.h  pn532.c  pn532.h
main/storage/: dump_store.c  dump_store.h  hex_util.c  hex_util.h  keys_store.c  keys_store.h
(+1 files in other folders)
